<resources>
    <string name="app_name">Elucidate</string>
    <string name="welcome_message">Welcome to Elucidate</string>
    <string name="upload_data">Upload data</string>
    <string name="retrieve_data">Retrieve data</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Create an Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="account_created">Account Created!</string>
    <string name="password_hint">Password...</string>
    <string name="dashboard">Dashboard</string>
    <string name="log_mood">Log Mood</string>
    <string name="mood_here">Mood here</string>
    <string name="mood_logged">Mood Logged!</string>
    <string name="please_rate_your_mood">Please rate your mood...</string>
    <string name="rate_mood">Rate Mood</string>
    <string name="name">Name</string>
    <string name="emailSignUp">Email...</string>
    <string name="hi">Hi</string>
    <string name="user_info">user info</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here</string>
    <string name="sign_out">Sign Out</string>
    <string name="go_to_dashboard">Go To Dashboard</string>
    <string name="age">Age...</string>
    <string name="save_complete"><![CDATA[Save & complete]]></string>
    <string name="profile_name">Name...</string>
    <string name="please_enter_your_details">Please enter your details...</string>
    <string name="get_started">Get Started</string>
    <string name="split_tester">Here I am testing my string? I want, to make sure/clarify \n
                    that it works! If it doesn\'t- I will be angry; and I will be annoyed.</string>
    <string name="chart">Chart</string>
    <string name="please_enter_details_about_how_you_are_feeling">Please enter details about how you are feeling...</string>
    <string name="please_rate_your_mood_on_the_slider_below">Please rate your mood on the slider below...</string>
    <string name="mood">Mood...</string>
    <string name="low_mood">Low Mood</string>
    <string name="good_mood">Good Mood</string>
    <string name="success">SUCCESS!</string>
    <string name="please_select_your_keywords">Please Select your keywords...</string>
    <string name="check_words">check words</string>
    <string name="please_select_any_words_that_make_you_feel_good">Please select any words that make you feel good...</string>
    <string name="finished">Finished!</string>
    <string name="please_select_any_words_that_make_you_feel_bad">Please select any words that make you feel bad...</string>
    <string name="next">Next</string>
    <string name="please_select_a_date">Please select a date...</string>
    <string name="yyyy_mm_dd">yyyy/mm/dd</string>
    <string name="select">select</string>
    <string name="insights">Insights</string>
    <string name="title">title</string>
    <string name="enter_keywords">Enter keywords...</string>
    <string name="or_select_a_time_period">Or select a time period...</string>
    <string name="search">Search</string>
    <string name="today">Today</string>
    <string name="_7_days">7 Days</string>
    <string name="_30_days">30 Days</string>
    <string name="by_date">By Date</string>
    <string name="all_entries">All Entries</string>
    <string name="popular_keywords">Popular Keywords</string>
    <string name="popular_triggers">Popular Triggers</string>
    <string name="popular_positives">Popular Positives</string>
    <string name="mood_rating_graph">Mood Rating Graph</string>
    <string name="mood_text">Mood</string>
    <string name="general">General</string>
    <string name="mood_caps">MOOD</string>
    <string name="general_caps">GENERAL</string>
    <string name="what_would_you_like_to_work_with_today">What would you like to work with today?</string>
    <string name="log_entry">Log Entry</string>
    <string name="mood_ratings">Mood Ratings</string>
    <string name="entries">Entries</string>
    <string name="enter_a_keyword">Enter a keyword...</string>
    <string name="review_your_entries">Review your entries</string>


</resources>