<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.DashboardFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btnLogMood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:text="@string/log_mood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDashWelcome" />

    <Button
        android:id="@+id/btnDashLogOut"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPopularPositives" />

    <TextView
        android:id="@+id/tvDashWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInsights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insights"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogMood" />

    <Button
        android:id="@+id/btnPopularKeywords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_keywords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInsights" />

    <Button
        android:id="@+id/btnPopularTriggers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_triggers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPopularKeywords" />

    <Button
        android:id="@+id/btnPopularPositives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_positives"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPopularTriggers" />

</androidx.constraintlayout.widget.ConstraintLayout>